@@ -25,39 +25,33 @@ import net.mcreator.blockly.data.Dependency;
 import net.mcreator.blockly.data.StatementInput;
 import net.mcreator.blockly.java.BlocklyToProcedure;
 import net.mcreator.generator.template.TemplateGeneratorException;
+import net.mcreator.ui.init.L10N;
 import net.mcreator.util.XMLUtil;
 import net.mcreator.workspace.elements.VariableElement;
+import net.mcreator.workspace.elements.VariableType;
+import net.mcreator.workspace.elements.VariableTypeLoader;
+import org.apache.commons.lang3.StringUtils;
 import org.w3c.dom.Element;
 
 import java.util.HashMap;
 import java.util.List;
+import java.util.Locale;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 public class GetVariableBlock implements IBlockGenerator {
+	private final String[] names;
+
+	public GetVariableBlock() {
+		names = VariableTypeLoader.INSTANCE.getAllVariableTypes().stream().map(VariableType::getName)
+				.map(s -> s = "variables_get_" + s).toArray(String[]::new);
+	}
 
 	@Override public void generateBlock(BlocklyToCode master, Element block) throws TemplateGeneratorException {
-		String type;
-
-		String blocktype = block.getAttribute("type");
-		switch (blocktype) {
-		case "variables_get_number":
-			type = "NUMBER";
-			break;
-		case "variables_get_text":
-			type = "STRING";
-			break;
-		case "variables_get_logic":
-			type = "LOGIC";
-			break;
-		case "variables_get_itemstack":
-			type = "ITEMSTACK";
-			break;
-		default:
-			return;
-		}
+		String type = StringUtils.removeStart(block.getAttribute("type"), "variables_get_");
+		VariableType typeObject = VariableTypeLoader.INSTANCE.fromName(type);
 
 		Element variable = XMLUtil.getFirstChildrenWithName(block, "field");
+		Element entityInput = XMLUtil.getFirstChildrenWithName(block, "value");
 		if (variable != null) {
 			String[] varfield = variable.getTextContent().split(":");
 			if (varfield.length == 2) {
@@ -65,61 +59,79 @@ public class GetVariableBlock implements IBlockGenerator {
 				String name = varfield[1];
 
 				if (scope.equals("global") && !master.getWorkspace().getVariableElements().stream()
-						.map(VariableElement::getName).collect(Collectors.toList()).contains(name)) {
+						.map(VariableElement::getName).toList().contains(name)) {
 					master.addCompileNote(new BlocklyCompileNote(BlocklyCompileNote.Type.ERROR,
-							"Variable get block is bound to a variable that does not exist. Remove this block!"));
+							L10N.t("blockly.errors.variables.invalid_var", L10N.t("blockly.block.get_var"),
+									L10N.t("blockly.errors.remove_block"))));
 					return;
 				} else if (master instanceof BlocklyToProcedure && scope.equals("local")
-						&& !((BlocklyToProcedure) master).getVariables()
-						.contains(name)) { // check if local variable exists
+						&& !((BlocklyToProcedure) master).getLocalVariables().stream().map(VariableElement::toString)
+						.toList().contains(name)) { // check if local variable exists
 					master.addCompileNote(new BlocklyCompileNote(BlocklyCompileNote.Type.ERROR,
-							"Variable get block is bound to a local variable that does not exist. Remove this block!"));
+							L10N.t("blockly.errors.variables.invalid_local_var", L10N.t("blockly.block.get_var"),
+									L10N.t("blockly.errors.remove_block"))));
 					return;
 				} else if (scope.equals("local") && !(master instanceof BlocklyToProcedure)) {
 					master.addCompileNote(new BlocklyCompileNote(BlocklyCompileNote.Type.ERROR,
-							"This editor does not support local variables!"));
+							L10N.t("blockly.warnings.variables.local_scope_unsupported")));
 					return;
 				} else if (scope.equalsIgnoreCase("local")) {
-					List<StatementInput> statementInputList = master
-							.getStatementInputsMatching(statementInput -> statementInput.disable_local_variables);
+					List<StatementInput> statementInputList = master.getStatementInputsMatching(
+							statementInput -> statementInput.disable_local_variables);
 					if (!statementInputList.isEmpty()) {
 						for (StatementInput statementInput : statementInputList) {
 							master.addCompileNote(new BlocklyCompileNote(BlocklyCompileNote.Type.ERROR,
-									"Statement " + statementInput.name + " does not support local variables."));
+									L10N.t("blockly.errors.variables.no_local_scope.statement", statementInput.name)));
 							break;
 						}
 						return;
 					}
-				}
-
-				if (scope.equals("global")) {
+				} else if (scope.equals("global")) {
 					scope = master.getWorkspace().getVariableElementByName(name).getScope().name();
 					if (scope.equals("GLOBAL_MAP") || scope.equals("GLOBAL_WORLD")) {
 						master.addDependency(new Dependency("world", "world"));
-					} else if (scope.equals("PLAYER_LIFETIME") || scope.equals("PLAYER_PERSISTENT")) {
-						master.addDependency(new Dependency("entity", "entity"));
+					} else if (entityInput == null && (scope.equals("PLAYER_LIFETIME") || scope.equals(
+							"PLAYER_PERSISTENT"))) {
+						master.addCompileNote(new BlocklyCompileNote(BlocklyCompileNote.Type.ERROR,
+								L10N.t("blockly.errors.variables.missing_entity_input",
+										L10N.t("blockly.block.get_var"))));
+						return;
 					}
 				}
+
+				Object getterTemplate = typeObject.getScopeDefinition(master.getWorkspace(),
+						scope.toUpperCase(Locale.ENGLISH)).get("get");
+				if (getterTemplate == null) {
+					master.addCompileNote(new BlocklyCompileNote(BlocklyCompileNote.Type.ERROR,
+							L10N.t("blockly.errors.variables.no_getter_support", type, scope)));
+					return;
+				}
+
+				String entitycode = null;
+				if (entityInput != null)
+					entitycode = BlocklyToCode.directProcessOutputBlock(master, entityInput);
 
 				if (master.getTemplateGenerator() != null) {
 					Map<String, Object> dataModel = new HashMap<>();
 					dataModel.put("name", name);
 					dataModel.put("type", type);
-					dataModel.put("scope", scope);
+					dataModel.put("scope", scope.toUpperCase(Locale.ENGLISH));
+					if (entitycode != null)
+						dataModel.put("entity", entitycode);
+
 					String code = master.getTemplateGenerator()
-							.generateFromTemplate("_get_variable.java.ftl", dataModel);
+							.generateFromString(getterTemplate.toString(), dataModel);
 					master.append(code);
 				}
 			}
 		} else {
 			master.addCompileNote(new BlocklyCompileNote(BlocklyCompileNote.Type.ERROR,
-					"One of the get variable blocks is improperly defined."));
+					L10N.t("blockly.errors.variables.improperly_defined", L10N.t("blockly.block.get"))));
 		}
 	}
 
 	@Override public String[] getSupportedBlocks() {
-		return new String[] { "variables_get_logic", "variables_get_number", "variables_get_text",
-				"variables_get_itemstack" };
+		return names;
 	}
 
 	@Override public BlockType getBlockType() {
