@@ -22,9 +22,9 @@ import com.esotericsoftware.yamlbeans.YamlException;
 import com.esotericsoftware.yamlbeans.YamlReader;
 import net.mcreator.io.FileIO;
 import net.mcreator.plugin.PluginLoader;
+import net.mcreator.util.FilenameUtilsPatched;
 import net.mcreator.workspace.Workspace;
 import net.mcreator.workspace.settings.WorkspaceSettings;
-import org.apache.commons.io.FilenameUtils;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 
@@ -49,10 +49,8 @@ public class ModAPIManager {
 			try {
 				Map<?, ?> apiconfiguration = (Map<?, ?>) reader.read();
 
-				ModAPI modAPI = new ModAPI(FilenameUtils.getBaseName(apidefinition),
-						(String) apiconfiguration.get("name"));
-
-				Map<String, ModAPI.Implementation> implementations = new HashMap<>();
+				ModAPI modAPI = new ModAPI(FilenameUtilsPatched.getBaseName(apidefinition),
+						(String) apiconfiguration.get("name"), new HashMap<>());
 
 				for (Object keyraw : apiconfiguration.keySet()) {
 					String key = (String) keyraw;
@@ -60,62 +58,58 @@ public class ModAPIManager {
 						Map<?, ?> impldef = (Map<?, ?>) apiconfiguration.get(keyraw);
 						String gradle = (String) impldef.get("gradle");
 						List<?> updateFiles = (List<?>) impldef.get("update_files");
-						boolean requiredWhenEnabled = impldef.get("required_when_enabled") != null && Boolean
-								.parseBoolean(impldef.get("required_when_enabled").toString());
+						boolean requiredWhenEnabled =
+								impldef.get("required_when_enabled") != null && Boolean.parseBoolean(
+										impldef.get("required_when_enabled").toString());
 
 						if (updateFiles == null)
 							updateFiles = Collections.emptyList();
 
-						ModAPI.Implementation implementation = new ModAPI.Implementation(modAPI, gradle,
+						ModAPIImplementation implementation = new ModAPIImplementation(modAPI, gradle,
 								updateFiles.stream().map(Object::toString).collect(Collectors.toList()),
 								requiredWhenEnabled);
-						implementations.put(key, implementation);
+						modAPI.implementations().put(key, implementation);
 					}
 				}
 
-				modAPI.setImplementations(implementations);
+				modApiList.put(FilenameUtilsPatched.getBaseName(apidefinition), modAPI);
 
-				modApiList.put(FilenameUtils.getBaseName(apidefinition), modAPI);
-
-				LOG.debug("Loaded mod API definition: " + FilenameUtils.getBaseName(apidefinition));
+				LOG.debug("Loaded mod API definition: " + FilenameUtilsPatched.getBaseName(apidefinition));
 			} catch (YamlException e) {
 				LOG.error("Failed to load mod API definition: " + e.getMessage());
 			}
 		}
 	}
 
-	public static List<ModAPI.Implementation> getModAPIsForGenerator(String generatorName) {
-		List<ModAPI.Implementation> implementations = new ArrayList<>();
+	public static List<ModAPIImplementation> getModAPIsForGenerator(String generatorName) {
+		List<ModAPIImplementation> implementations = new ArrayList<>();
 
 		for (ModAPI api : modApiList.values())
-			if (api.implementations.containsKey(generatorName))
-				implementations.add(api.implementations.get(generatorName));
+			if (api.implementations().containsKey(generatorName))
+				implementations.add(api.implementations().get(generatorName));
 
 		return implementations;
 	}
 
-	public static ModAPI.Implementation getModAPIForNameAndGenerator(String name, String generatorName) {
+	public static ModAPIImplementation getModAPIForNameAndGenerator(String name, String generatorName) {
 		ModAPI modAPI = modApiList.get(name);
 		if (modAPI != null) {
-			return modAPI.implementations.get(generatorName);
+			return modAPI.implementations().get(generatorName);
 		}
 
 		return null;
 	}
 
 	public static void deleteAPIs(Workspace workspace, WorkspaceSettings workspaceSettings) {
-		List<ModAPI.Implementation> apis = workspaceSettings.getMCreatorDependencies().stream()
+		List<ModAPIImplementation> apis = workspaceSettings.getMCreatorDependencies().stream()
 				.map(e -> ModAPIManager.getModAPIForNameAndGenerator(e, workspace.getGenerator().getGeneratorName()))
-				.collect(Collectors.toList());
-		for (ModAPI.Implementation api : apis) {
-			if (api.update_files != null) {
-				for (String fileRelative : api.update_files) {
+				.toList();
+		for (ModAPIImplementation api : apis) {
+			if (api.update_files() != null) {
+				for (String fileRelative : api.update_files()) {
 					File file = new File(workspace.getWorkspaceFolder(), fileRelative);
-					if (workspace.getFolderManager().isFileInWorkspace(file)) {
-						if (file.isFile()) {
-							file.delete();
-						}
-					}
+					if (workspace.getFolderManager().isFileInWorkspace(file) && file.isFile())
+						file.delete();
 				}
 			}
 		}
