@@ -19,6 +19,7 @@
 package net.mcreator.ui.workspace;
 
 import net.mcreator.element.*;
+import net.mcreator.element.types.interfaces.ICommonType;
 import net.mcreator.generator.GeneratorStats;
 import net.mcreator.generator.GeneratorTemplate;
 import net.mcreator.io.FileIO;
@@ -41,9 +42,7 @@ import net.mcreator.ui.init.TiledImageCache;
 import net.mcreator.ui.init.UIRES;
 import net.mcreator.ui.laf.FileIcons;
 import net.mcreator.ui.laf.SlickDarkScrollBarUI;
-import net.mcreator.ui.laf.renderer.LargeIconModListRender;
-import net.mcreator.ui.laf.renderer.ListIconModListRender;
-import net.mcreator.ui.laf.renderer.SmallIconModListRender;
+import net.mcreator.ui.laf.renderer.elementlist.*;
 import net.mcreator.ui.modgui.ModElementGUI;
 import net.mcreator.ui.modgui.ModTypeDropdown;
 import net.mcreator.ui.validation.Validator;
@@ -69,6 +68,7 @@ import java.io.File;
 import java.util.List;
 import java.util.*;
 import java.util.concurrent.atomic.AtomicBoolean;
+import java.util.concurrent.atomic.AtomicInteger;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
@@ -101,6 +101,7 @@ import java.util.stream.Collectors;
 	private final MCreator mcreator;
 
 	private final JButton upFolder;
+	private final JButton renameFolder;
 
 	private final JLabel but2 = new JLabel(TiledImageCache.workspaceEdit);
 	private final JLabel but2a = new JLabel(TiledImageCache.workspaceDuplicate);
@@ -109,8 +110,19 @@ import java.util.stream.Collectors;
 	private final JLabel but5a = new JLabel(TiledImageCache.workspaceToggle);
 	private final JLabel but6 = new JLabel(TiledImageCache.workspaceModElementIDs);
 
+	private final JMenuItem deleteElement = new JMenuItem(L10N.t("workspace.elements.list.edit.delete"));
+	private final JMenuItem duplicateElement = new JMenuItem(L10N.t("workspace.elements.list.edit.duplicate"));
+	private final JMenuItem codeElement = new JMenuItem(L10N.t("workspace.elements.list.edit.code"));
+	private final JMenuItem lockElement = new JMenuItem(L10N.t("workspace.elements.list.edit.lock"));
+	private final JMenuItem idElement = new JMenuItem(L10N.t("workspace.elements.list.edit.id"));
+	private final JMenuItem renameElementFolder = new JMenuItem(L10N.t("workspace.elements.list.edit.rename.folder"));
+
 	private final CardLayout mainpcl = new CardLayout();
 	private final JPanel mainp = new JPanel(mainpcl);
+
+	private final JPanel detailsbar = new JPanel(new GridLayout(1, 6));
+
+	private final JButton view = L10N.button("workspace.elements.list.icon_size");
 
 	private final TransparentToolBar modElementsBar = new TransparentToolBar();
 
@@ -127,6 +139,30 @@ import java.util.stream.Collectors;
 	private final JRadioButtonMenuItem sortLoadingOrder = new JRadioButtonMenuItem(
 			L10N.t("workspace.elements.list.sort_loading_order"));
 
+	private final OptionPaneValidatior folderNameValidator = new OptionPaneValidatior() {
+		@Override public ValidationResult validate(JComponent component) {
+			String folderName = ((JTextField) component).getText();
+
+			if (!folderName.matches("[A-Za-z0-9._ -]+")) {
+				return new Validator.ValidationResult(ValidationResultType.ERROR,
+						L10N.t("workspace.elements.folders.add.error_letters"));
+			}
+
+			List<FolderElement> folderElements = mcreator.getWorkspace().getFoldersRoot().getRecursiveFolderChildren();
+
+			FolderElement tmpFolder = new FolderElement(folderName, currentFolder);
+
+			for (FolderElement folderElement : folderElements) {
+				if (folderElement.equals(tmpFolder)) {
+					return new Validator.ValidationResult(ValidationResultType.ERROR,
+							L10N.t("workspace.elements.folders.add.error_exists"));
+				}
+			}
+
+			return Validator.ValidationResult.PASSED;
+		}
+	};
+
 	public WorkspacePanel(final MCreator mcreator) {
 		super(new BorderLayout(5, 5));
 		this.mcreator = mcreator;
@@ -139,6 +175,8 @@ import java.util.stream.Collectors;
 		this.vcsPan = new WorkspacePanelVCS(this);
 
 		this.elementsBreadcrumb = new WorkspaceFolderBreadcrumb(mcreator);
+
+		JPopupMenu contextMenu = new JPopupMenu();
 
 		panels.setOpaque(false);
 
@@ -157,20 +195,7 @@ import java.util.stream.Collectors;
 						if (element.equals(target))
 							continue;
 
-						FolderElement folder = (FolderElement) element;
-						String originalFolderPath = folder.getPath();
-
-						// first remove folder from old parent and assign new parent to the folder
-						folder.getParent().removeChild(folder);
-						((FolderElement) target).addChild(folder);
-
-						// then re-assign mod elements to the new folder ath
-						for (ModElement modElement : mcreator.getWorkspace().getModElements()) {
-							if (originalFolderPath.equals(modElement.getFolderPath())) {
-								// set parent folder again to update the path
-								modElement.setParentFolder(folder);
-							}
-						}
+						((FolderElement) element).moveTo(mcreator.getWorkspace(), (FolderElement) target);
 					}
 				}
 				mcreator.getWorkspace().markDirty();
@@ -186,8 +211,7 @@ import java.util.stream.Collectors;
 				super.mouseMoved(e);
 				int idx = list.locationToIndex(e.getPoint());
 				IElement element = list.getModel().getElementAt(idx);
-				if (element instanceof ModElement) {
-					ModElement modElement = (ModElement) element;
+				if (element instanceof ModElement modElement) {
 					mcreator.getStatusBar()
 							.setMessage(modElement.getType().getReadableName() + ": " + modElement.getName());
 				}
@@ -196,19 +220,44 @@ import java.util.stream.Collectors;
 
 		list.addMouseListener(new MouseAdapter() {
 			@Override public void mouseClicked(MouseEvent e) {
-				if (e.getClickCount() == 2 && !e.isConsumed()) {
+				IElement selected = list.getSelectedValue();
+
+				if (e.isConsumed())
+					return;
+
+				if (e.getButton() == MouseEvent.BUTTON3) {
+					list.setSelectedIndex(list.locationToIndex(e.getPoint()));
+					selected = list.getSelectedValue();
+
+					if (selected instanceof FolderElement) {
+						duplicateElement.setEnabled(false);
+						codeElement.setEnabled(false);
+						lockElement.setEnabled(false);
+						idElement.setEnabled(false);
+						renameElementFolder.setEnabled(true);
+					} else {
+						duplicateElement.setEnabled(true);
+						codeElement.setEnabled(true);
+						lockElement.setEnabled(true);
+						idElement.setEnabled(true);
+						renameElementFolder.setEnabled(false);
+					}
+
+					contextMenu.show(list, e.getX(), e.getY());
+				} else if (e.getClickCount() == 2) {
 					list.cancelDND();
 
-					IElement selected = list.getSelectedValue();
 					if (selected instanceof FolderElement) {
 						switchFolder((FolderElement) selected);
 					} else {
-						if (((e.getModifiers() & ActionEvent.ALT_MASK) == ActionEvent.ALT_MASK))
+						if (((e.getModifiersEx() & InputEvent.ALT_DOWN_MASK) == InputEvent.ALT_DOWN_MASK))
 							editCurrentlySelectedModElementAsCode((ModElement) selected, list, e.getX(), e.getY());
 						else
 							editCurrentlySelectedModElement((ModElement) selected, list, e.getX(), e.getY());
 					}
 				}
+
+				renameFolder.setEnabled(selected instanceof FolderElement);
 			}
 		});
 
@@ -290,11 +339,14 @@ import java.util.stream.Collectors;
 
 		modElementsBar.setBorder(BorderFactory.createEmptyBorder(3, 5, 3, 0));
 
-		JButton addFolder = new JButton(new ImageIcon(ImageUtils
-				.crop(ImageUtils.toBufferedImage(UIRES.get("laf.newFolder.gif").getImage()),
+		JButton addFolder = new JButton(new ImageIcon(
+				ImageUtils.crop(ImageUtils.toBufferedImage(UIRES.get("laf.newFolder.gif").getImage()),
 						new Rectangle(1, 1, 16, 16))));
-		upFolder = new JButton(new ImageIcon(ImageUtils
-				.crop(ImageUtils.toBufferedImage(UIRES.get("laf.upFolder.gif").getImage()),
+		upFolder = new JButton(new ImageIcon(
+				ImageUtils.crop(ImageUtils.toBufferedImage(UIRES.get("laf.upFolder.gif").getImage()),
+						new Rectangle(1, 1, 16, 16))));
+		renameFolder = new JButton(new ImageIcon(
+				ImageUtils.crop(ImageUtils.toBufferedImage(UIRES.get("laf.renameFolder.gif").getImage()),
 						new Rectangle(1, 1, 16, 16))));
 
 		addFolder.setContentAreaFilled(false);
@@ -310,43 +362,24 @@ import java.util.stream.Collectors;
 		upFolder.setToolTipText(L10N.t("workspace.elements.folders.up_tooltip"));
 		upFolder.setEnabled(false);
 
-		addFolder.addActionListener(e -> {
-			String name = VOptionPane.showInputDialog(mcreator, L10N.t("workspace.elements.folders.add.message"),
-					L10N.t("workspace.elements.folders.add.title"), null, new OptionPaneValidatior() {
-						@Override public ValidationResult validate(JComponent component) {
-							String text = ((JTextField) component).getText();
+		renameFolder.setContentAreaFilled(false);
+		renameFolder.setBorderPainted(false);
+		renameFolder.setBorder(BorderFactory.createEmptyBorder(0, 5, 0, 5));
+		renameFolder.setCursor(new Cursor(Cursor.HAND_CURSOR));
+		renameFolder.setToolTipText(L10N.t("workspace.elements.folders.rename_tooltip"));
+		renameFolder.setEnabled(false);
 
-							if (!text.matches("[A-Za-z0-9._ -]+")) {
-								return new Validator.ValidationResult(ValidationResultType.ERROR,
-										L10N.t("workspace.elements.folders.add.error_letters"));
-							}
-
-							List<FolderElement> folderElements = mcreator.getWorkspace().getFoldersRoot()
-									.getRecursiveFolderChildren();
-
-							FolderElement tmpFolder = new FolderElement(text, currentFolder);
-
-							for (FolderElement folderElement : folderElements) {
-								if (folderElement.equals(tmpFolder)) {
-									return new Validator.ValidationResult(ValidationResultType.ERROR,
-											L10N.t("workspace.elements.folders.add.error_exists"));
-								}
-							}
-
-							return Validator.ValidationResult.PASSED;
-						}
-					});
-
-			if (name != null) {
-				currentFolder.addChild(new FolderElement(name, currentFolder));
-				mcreator.getWorkspace().markDirty();
-				reloadElements();
-			}
-		});
+		addFolder.addActionListener(e -> addNewFolder());
 
 		upFolder.addActionListener(e -> {
 			if (!currentFolder.isRoot()) {
 				switchFolder(currentFolder.getParent());
+			}
+		});
+
+		renameFolder.addActionListener(e -> {
+			if (list.getSelectedValue() instanceof FolderElement) {
+				renameFolder((FolderElement) list.getSelectedValue());
 			}
 		});
 
@@ -355,108 +388,138 @@ import java.util.stream.Collectors;
 
 		modElementsBar.add(addFolder);
 		modElementsBar.add(upFolder);
+		modElementsBar.add(renameFolder);
 
 		modElementsBar.add(new JEmptyBox(7, 1));
 
 		JComponent isize = ComponentUtils.deriveFont(L10N.label("workspace.elements.list.icon_size"), 12);
 		isize.setToolTipText(L10N.t("workspace.elements.list.icon_size.tooltip"));
 		modElementsBar.add(isize);
+		view.setCursor(new Cursor(Cursor.HAND_CURSOR));
+		view.setContentAreaFilled(false);
+		view.setOpaque(false);
+		view.setBorder(BorderFactory.createEmptyBorder(0, 5, 0, 5));
+		ComponentUtils.deriveFont(view, 12);
+		modElementsBar.add(view);
 
-		JToggleButton largeIcons = new JToggleButton(L10N.t("workspace.elements.list.large"));
-		largeIcons.setCursor(new Cursor(Cursor.HAND_CURSOR));
-		largeIcons.setIcon(UIRES.get("16px.large.gif"));
-		largeIcons.setContentAreaFilled(false);
-		largeIcons.setOpaque(false);
-		largeIcons.addChangeListener(e -> {
-			if (largeIcons.isSelected())
-				largeIcons.setForeground(Color.white);
-			else
-				largeIcons.setForeground(Color.darkGray.brighter());
+		JRadioButtonMenuItem tilesIcons = new JRadioButtonMenuItem(L10N.t("workspace.elements.list.tiles"));
+		tilesIcons.addActionListener(e -> {
+			if (tilesIcons.isSelected()) {
+				PreferencesManager.PREFERENCES.hidden.workspaceModElementIconSize = PreferencesData.WorkspaceIconSize.TILES;
+				updateElementListRenderer();
+			}
 		});
+		tilesIcons.setSelected(PreferencesManager.PREFERENCES.hidden.workspaceModElementIconSize
+				== PreferencesData.WorkspaceIconSize.TILES);
+		Arrays.stream(tilesIcons.getChangeListeners()).forEach(e -> e.stateChanged(new ChangeEvent(tilesIcons)));
+		ComponentUtils.deriveFont(tilesIcons, 12);
+		tilesIcons.setBorder(BorderFactory.createEmptyBorder(3, 5, 3, 5));
+
+		JRadioButtonMenuItem largeIcons = new JRadioButtonMenuItem(L10N.t("workspace.elements.list.large"));
 		largeIcons.addActionListener(e -> {
 			if (largeIcons.isSelected()) {
-				PreferencesManager.PREFERENCES.hidden.workspaceIconSize = PreferencesData.WorkspaceIconSize.LARGE;
+				PreferencesManager.PREFERENCES.hidden.workspaceModElementIconSize = PreferencesData.WorkspaceIconSize.LARGE;
 				updateElementListRenderer();
 			}
 		});
-		largeIcons.setSelected(
-				PreferencesManager.PREFERENCES.hidden.workspaceIconSize == PreferencesData.WorkspaceIconSize.LARGE);
+		largeIcons.setSelected(PreferencesManager.PREFERENCES.hidden.workspaceModElementIconSize
+				== PreferencesData.WorkspaceIconSize.LARGE);
 		Arrays.stream(largeIcons.getChangeListeners()).forEach(e -> e.stateChanged(new ChangeEvent(largeIcons)));
 		ComponentUtils.deriveFont(largeIcons, 12);
-		largeIcons.setBorder(BorderFactory.createEmptyBorder(0, 5, 0, 5));
-		modElementsBar.add(largeIcons);
+		largeIcons.setBorder(BorderFactory.createEmptyBorder(5, 5, 5, 5));
 
-		JToggleButton smallIcons = new JToggleButton(L10N.t("workspace.elements.list.small"));
-		smallIcons.setCursor(new Cursor(Cursor.HAND_CURSOR));
-		smallIcons.setIcon(UIRES.get("16px.small.gif"));
-		smallIcons.setContentAreaFilled(false);
-		smallIcons.setOpaque(false);
-		smallIcons.addChangeListener(e -> {
-			if (smallIcons.isSelected())
-				smallIcons.setForeground(Color.white);
-			else
-				smallIcons.setForeground(Color.darkGray.brighter());
+		JRadioButtonMenuItem mediumIcons = new JRadioButtonMenuItem(L10N.t("workspace.elements.list.medium"));
+		mediumIcons.addActionListener(e -> {
+			if (mediumIcons.isSelected()) {
+				PreferencesManager.PREFERENCES.hidden.workspaceModElementIconSize = PreferencesData.WorkspaceIconSize.MEDIUM;
+				updateElementListRenderer();
+			}
 		});
+		mediumIcons.setSelected(PreferencesManager.PREFERENCES.hidden.workspaceModElementIconSize
+				== PreferencesData.WorkspaceIconSize.MEDIUM);
+		Arrays.stream(mediumIcons.getChangeListeners()).forEach(e -> e.stateChanged(new ChangeEvent(mediumIcons)));
+		ComponentUtils.deriveFont(mediumIcons, 12);
+		mediumIcons.setBorder(BorderFactory.createEmptyBorder(3, 5, 3, 5));
+
+		JRadioButtonMenuItem smallIcons = new JRadioButtonMenuItem(L10N.t("workspace.elements.list.small"));
 		smallIcons.addActionListener(e -> {
 			if (smallIcons.isSelected()) {
-				PreferencesManager.PREFERENCES.hidden.workspaceIconSize = PreferencesData.WorkspaceIconSize.SMALL;
+				PreferencesManager.PREFERENCES.hidden.workspaceModElementIconSize = PreferencesData.WorkspaceIconSize.SMALL;
 				updateElementListRenderer();
 			}
 		});
-		smallIcons.setSelected(
-				PreferencesManager.PREFERENCES.hidden.workspaceIconSize == PreferencesData.WorkspaceIconSize.SMALL);
+		smallIcons.setSelected(PreferencesManager.PREFERENCES.hidden.workspaceModElementIconSize
+				== PreferencesData.WorkspaceIconSize.SMALL);
 		Arrays.stream(smallIcons.getChangeListeners()).forEach(e -> e.stateChanged(new ChangeEvent(smallIcons)));
 		ComponentUtils.deriveFont(smallIcons, 12);
-		smallIcons.setBorder(BorderFactory.createEmptyBorder(0, 0, 0, 5));
-		modElementsBar.add(smallIcons);
+		smallIcons.setBorder(BorderFactory.createEmptyBorder(3, 5, 3, 5));
 
-		JToggleButton listIcons = new JToggleButton(L10N.t("workspace.elements.list.list"));
-		listIcons.setCursor(new Cursor(Cursor.HAND_CURSOR));
-		listIcons.setIcon(UIRES.get("16px.list.gif"));
-		listIcons.setContentAreaFilled(false);
-		listIcons.setOpaque(false);
-		listIcons.addChangeListener(e -> {
-			if (listIcons.isSelected())
-				listIcons.setForeground(Color.white);
-			else
-				listIcons.setForeground(Color.darkGray.brighter());
-		});
+		JRadioButtonMenuItem listIcons = new JRadioButtonMenuItem(L10N.t("workspace.elements.list.list"));
 		listIcons.addActionListener(e -> {
 			if (listIcons.isSelected()) {
-				PreferencesManager.PREFERENCES.hidden.workspaceIconSize = PreferencesData.WorkspaceIconSize.LIST;
+				PreferencesManager.PREFERENCES.hidden.workspaceModElementIconSize = PreferencesData.WorkspaceIconSize.LIST;
 				updateElementListRenderer();
 			}
 		});
-		listIcons.setSelected(
-				PreferencesManager.PREFERENCES.hidden.workspaceIconSize == PreferencesData.WorkspaceIconSize.LIST);
+		listIcons.setSelected(PreferencesManager.PREFERENCES.hidden.workspaceModElementIconSize
+				== PreferencesData.WorkspaceIconSize.LIST);
 		Arrays.stream(listIcons.getChangeListeners()).forEach(e -> e.stateChanged(new ChangeEvent(listIcons)));
 		ComponentUtils.deriveFont(listIcons, 12);
-		listIcons.setBorder(BorderFactory.createEmptyBorder(0, 0, 0, 5));
-		modElementsBar.add(listIcons);
+		listIcons.setBorder(BorderFactory.createEmptyBorder(3, 5, 3, 5));
+
+		JRadioButtonMenuItem detailsIcons = new JRadioButtonMenuItem(L10N.t("workspace.elements.list.details"));
+		detailsIcons.addActionListener(e -> {
+			if (detailsIcons.isSelected()) {
+				PreferencesManager.PREFERENCES.hidden.workspaceModElementIconSize = PreferencesData.WorkspaceIconSize.DETAILS;
+				updateElementListRenderer();
+			}
+		});
+		detailsIcons.setSelected(PreferencesManager.PREFERENCES.hidden.workspaceModElementIconSize
+				== PreferencesData.WorkspaceIconSize.DETAILS);
+		Arrays.stream(detailsIcons.getChangeListeners()).forEach(e -> e.stateChanged(new ChangeEvent(detailsIcons)));
+		ComponentUtils.deriveFont(detailsIcons, 12);
+		detailsIcons.setBorder(BorderFactory.createEmptyBorder(3, 5, 3, 5));
 
 		sp.addMouseWheelListener(new MouseAdapter() {
 			@Override public void mouseWheelMoved(MouseWheelEvent e) {
 				super.mouseWheelMoved(e);
 				if (e.isControlDown()) {
 					if (e.getWheelRotation() < 0) {
-						if (listIcons.isSelected())
-							smallIcons.doClick();
-						else
-							largeIcons.doClick();
-					} else {
-						if (largeIcons.isSelected())
-							smallIcons.doClick();
-						else
+						if (detailsIcons.isSelected()) {
 							listIcons.doClick();
+						} else if (listIcons.isSelected()) {
+							smallIcons.doClick();
+						} else if (smallIcons.isSelected()) {
+							mediumIcons.doClick();
+						} else if (mediumIcons.isSelected()) {
+							largeIcons.doClick();
+						} else if (largeIcons.isSelected()) {
+							tilesIcons.doClick();
+						}
+					} else {
+						if (tilesIcons.isSelected()) {
+							largeIcons.doClick();
+						} else if (largeIcons.isSelected()) {
+							mediumIcons.doClick();
+						} else if (mediumIcons.isSelected()) {
+							smallIcons.doClick();
+						} else if (smallIcons.isSelected()) {
+							listIcons.doClick();
+						} else if (listIcons.isSelected()) {
+							detailsIcons.doClick();
+						}
 					}
 				}
 			}
 		});
 
 		ButtonGroup buttonGroup = new ButtonGroup();
-		buttonGroup.add(smallIcons);
+		buttonGroup.add(tilesIcons);
 		buttonGroup.add(largeIcons);
+		buttonGroup.add(mediumIcons);
+		buttonGroup.add(smallIcons);
 		buttonGroup.add(listIcons);
+		buttonGroup.add(detailsIcons);
 
 		elementsCount.setHorizontalTextPosition(SwingConstants.LEFT);
 
@@ -493,19 +556,17 @@ import java.util.stream.Collectors;
 		JScrollablePopupMenu filterPopup = new JScrollablePopupMenu();
 		filterPopup.add(new UnregisteredAction(L10N.t("workspace.elements.list.filter_all"), e -> search.setText("")));
 		filterPopup.addSeparator();
-		filterPopup.add(new UnregisteredAction(L10N.t("workspace.elements.list.filter_locked"),
-				e -> search.setText("f:locked")));
+		filterPopup.add(
+				new UnregisteredAction(L10N.t("workspace.elements.list.filter_locked"), e -> togglefilter("f:locked")));
 		filterPopup.add(new UnregisteredAction(L10N.t("workspace.elements.list.filter_witherrors"),
-				e -> search.setText("f:err")));
+				e -> togglefilter("f:err")));
 		filterPopup.addSeparator();
-		for (ModElementType type : Arrays.stream(ModElementType.values())
-				.sorted(Comparator.comparing(ModElementType::getReadableName)).collect(Collectors.toList())) {
-			filterPopup.add(new UnregisteredAction(type.getReadableName(),
-					e -> search.setText("f:" + type.getReadableName().replace(" ", "").toLowerCase(Locale.ENGLISH)))
-					.setIcon(new ImageIcon(ImageUtils.resizeAA(TiledImageCache.getModTypeIcon(type).getImage(), 16))));
-
+		for (ModElementType<?> type : ModElementTypeLoader.REGISTRY) {
+			filterPopup.add(new UnregisteredAction(type.getReadableName(), e -> togglefilter(
+					"f:" + type.getReadableName().replace(" ", "").toLowerCase(Locale.ENGLISH))).setIcon(
+					new ImageIcon(ImageUtils.resizeAA(type.getIcon().getImage(), 16))));
 		}
-		filter.addActionListener(e -> filterPopup.show(filter, 0, 25));
+		filter.addActionListener(e -> filterPopup.show(filter, 0, 26));
 
 		JPopupMenu sortPopup = new JPopupMenu();
 		EventButtonGroup sortOne = new EventButtonGroup();
@@ -534,7 +595,24 @@ import java.util.stream.Collectors;
 		sortTwo.add(sortLoadingOrder);
 		sortPopup.add(sortLoadingOrder);
 
-		sort.addActionListener(e -> sortPopup.show(sort, 0, 25));
+		sort.addActionListener(e -> sortPopup.show(sort, 0, 26));
+
+		JPopupMenu viewPopup = new JPopupMenu();
+		viewPopup.add(tilesIcons);
+		viewPopup.add(largeIcons);
+		viewPopup.add(mediumIcons);
+		viewPopup.add(smallIcons);
+		viewPopup.add(listIcons);
+		viewPopup.add(detailsIcons);
+
+		tilesIcons.setIcon(UIRES.get("16px.tiles.gif"));
+		largeIcons.setIcon(UIRES.get("16px.large.gif"));
+		mediumIcons.setIcon(UIRES.get("16px.medium.gif"));
+		smallIcons.setIcon(UIRES.get("16px.small.gif"));
+		listIcons.setIcon(UIRES.get("16px.list.gif"));
+		detailsIcons.setIcon(UIRES.get("16px.details.gif"));
+
+		view.addActionListener(e -> viewPopup.show(view, 0, 23));
 
 		if (PreferencesManager.PREFERENCES.hidden.workspaceSortType == PreferencesData.WorkspaceSortType.NAME) {
 			sortName.setSelected(true);
@@ -554,7 +632,15 @@ import java.util.stream.Collectors;
 
 		mainp.setOpaque(false);
 
-		modElementsPanel.add("Center", PanelUtils.northAndCenterElement(elementsBreadcrumb, mainp));
+		detailsbar.add("Center", PanelUtils.gridElements(1, 6, L10N.label("workspace.elements.details.name"),
+				L10N.label("workspace.elements.details.id"), L10N.label("workspace.elements.details.type"),
+				L10N.label("workspace.elements.details.lock"), L10N.label("workspace.elements.details.compile")));
+		detailsbar.setBorder(BorderFactory.createEmptyBorder(4, 47, 4, 8));
+		detailsbar.setBackground((Color) UIManager.get("MCreatorLAF.BLACK_ACCENT"));
+
+		modElementsPanel.add("Center",
+				PanelUtils.northAndCenterElement(PanelUtils.northAndCenterElement(elementsBreadcrumb, detailsbar, 0, 0),
+						mainp));
 
 		panels.add(modElementsPanel, "mods");
 		panels.add(resourcesPan, "res");
@@ -583,8 +669,10 @@ import java.util.stream.Collectors;
 		btt1.setFocusPainted(false);
 		btt1.setOpaque(true);
 		btt1.setBackground((Color) UIManager.get("MCreatorLAF.LIGHT_ACCENT"));
-		btt1.setCursor(new Cursor(Cursor.HAND_CURSOR));
-		btt1.addActionListener(actionEvent -> {
+		btt1.setCursor(new
+
+				Cursor(Cursor.HAND_CURSOR));
+		btt1.addActionListener(e -> {
 			btt1.setBackground((Color) UIManager.get("MCreatorLAF.LIGHT_ACCENT"));
 			btt3.setBackground((Color) UIManager.get("MCreatorLAF.DARK_ACCENT"));
 			btt2.setBackground((Color) UIManager.get("MCreatorLAF.DARK_ACCENT"));
@@ -603,7 +691,7 @@ import java.util.stream.Collectors;
 		btt2.setOpaque(true);
 		btt2.setBackground((Color) UIManager.get("MCreatorLAF.DARK_ACCENT"));
 		btt2.setCursor(new Cursor(Cursor.HAND_CURSOR));
-		btt2.addActionListener(actionEvent -> {
+		btt2.addActionListener(e -> {
 			btt1.setBackground((Color) UIManager.get("MCreatorLAF.DARK_ACCENT"));
 			btt3.setBackground((Color) UIManager.get("MCreatorLAF.DARK_ACCENT"));
 			btt2.setBackground((Color) UIManager.get("MCreatorLAF.LIGHT_ACCENT"));
@@ -624,7 +712,7 @@ import java.util.stream.Collectors;
 		btt3.setOpaque(true);
 		btt3.setBackground((Color) UIManager.get("MCreatorLAF.DARK_ACCENT"));
 		btt3.setCursor(new Cursor(Cursor.HAND_CURSOR));
-		btt3.addActionListener(actionEvent -> {
+		btt3.addActionListener(e -> {
 			btt1.setBackground((Color) UIManager.get("MCreatorLAF.DARK_ACCENT"));
 			btt3.setBackground((Color) UIManager.get("MCreatorLAF.LIGHT_ACCENT"));
 			btt2.setBackground((Color) UIManager.get("MCreatorLAF.DARK_ACCENT"));
@@ -645,7 +733,7 @@ import java.util.stream.Collectors;
 		btt6.setOpaque(true);
 		btt6.setBackground((Color) UIManager.get("MCreatorLAF.DARK_ACCENT"));
 		btt6.setCursor(new Cursor(Cursor.HAND_CURSOR));
-		btt6.addActionListener(actionEvent -> {
+		btt6.addActionListener(e -> {
 			btt1.setBackground((Color) UIManager.get("MCreatorLAF.DARK_ACCENT"));
 			btt3.setBackground((Color) UIManager.get("MCreatorLAF.DARK_ACCENT"));
 			btt2.setBackground((Color) UIManager.get("MCreatorLAF.DARK_ACCENT"));
@@ -666,7 +754,7 @@ import java.util.stream.Collectors;
 		btt7.setOpaque(true);
 		btt7.setBackground((Color) UIManager.get("MCreatorLAF.DARK_ACCENT"));
 		btt7.setCursor(new Cursor(Cursor.HAND_CURSOR));
-		btt7.addActionListener(actionEvent -> {
+		btt7.addActionListener(e -> {
 			if (vcsPan.panelShown()) {
 				btt1.setBackground((Color) UIManager.get("MCreatorLAF.DARK_ACCENT"));
 				btt3.setBackground((Color) UIManager.get("MCreatorLAF.DARK_ACCENT"));
@@ -685,6 +773,7 @@ import java.util.stream.Collectors;
 		slo.add("West", rotatablePanel);
 
 		add("Center", slo);
+
 		setOpaque(false);
 
 		JPanel pne = new JPanel(new GridLayout(8, 1, 6, 6));
@@ -724,59 +813,7 @@ import java.util.stream.Collectors;
 
 		but3.addMouseListener(new MouseAdapter() {
 			@Override public void mouseClicked(MouseEvent e) {
-				if (but3.isEnabled()) {
-					if (list.getSelectedValue() != null) {
-						Object[] options = { "Yes", "No" };
-						int n = JOptionPane.showOptionDialog(mcreator,
-								L10N.t("workspace.elements.confirm_delete_message",
-										list.getSelectedValuesList().size()),
-								L10N.t("workspace.elements.confirm_delete_title"), JOptionPane.YES_NO_CANCEL_OPTION,
-								JOptionPane.QUESTION_MESSAGE, null, options, options[1]);
-
-						if (n == 0) {
-							AtomicBoolean buildNeeded = new AtomicBoolean(false);
-							list.getSelectedValuesList().forEach(re -> {
-								if (re instanceof ModElement) {
-									if (!buildNeeded.get()) {
-										GeneratableElement ge = ((ModElement) re).getGeneratableElement();
-										if (ge != null && mcreator.getModElementManager()
-												.usesGeneratableElementJava(ge))
-											buildNeeded.set(true);
-									}
-
-									mcreator.getWorkspace().removeModElement(((ModElement) re));
-								} else if (re instanceof FolderElement) {
-									FolderElement folder = (FolderElement) re;
-
-									// re-assign mod-elements from deleted folder to parent folder
-									for (ModElement modElement : mcreator.getWorkspace().getModElements()) {
-										if (folder.equals(modElement.getFolderPath())) {
-											modElement.setParentFolder(folder.getParent());
-										}
-									}
-
-									// re-assign deleted recursive children folder's elements to parent folder too
-									for (FolderElement childFolder : folder.getRecursiveFolderChildren()) {
-										for (ModElement modElement : mcreator.getWorkspace().getModElements()) {
-											if (childFolder.equals(modElement.getFolderPath())) {
-												modElement.setParentFolder(folder.getParent());
-											}
-										}
-									}
-
-									// remove folder from the parent's child list
-									// all folder's child folders will be orphaned at this point too
-									// and thus removed
-									folder.getParent().removeChild(folder);
-								}
-							});
-							updateMods();
-
-							if (buildNeeded.get())
-								mcreator.actionRegistry.buildWorkspace.doAction();
-						}
-					}
-				}
+				deleteCurrentlySelectedModElement();
 			}
 		});
 		but3.setToolTipText(L10N.t("workspace.elements.delete.tooltip"));
@@ -840,12 +877,10 @@ import java.util.stream.Collectors;
 		emptct.setLayout(new BoxLayout(emptct, BoxLayout.LINE_AXIS));
 		emptct.setOpaque(false);
 
-		emptct.add(ComponentUtils.deriveFont(L10N.label("workspace.elements.empty.tip_part1"), 24));
-
-		JLabel but1_empty = new JLabel(new ImageIcon(ImageUtils.resize(TiledImageCache.workspaceAdd.getImage(), 32)));
-		emptct.add(but1_empty);
-
-		emptct.add(ComponentUtils.deriveFont(L10N.label("workspace.elements.empty.tip_part2"), 24));
+		String[] workspaceEmptyTip = L10N.t("workspace.elements.empty.tip").split("%1");
+		emptct.add(ComponentUtils.deriveFont(new JLabel(workspaceEmptyTip[0]), 24));
+		emptct.add(new JLabel(new ImageIcon(ImageUtils.resize(TiledImageCache.workspaceAdd.getImage(), 32))));
+		emptct.add(ComponentUtils.deriveFont(new JLabel(workspaceEmptyTip[1]), 24));
 
 		JPanel emptbtpd = new JPanel(new BorderLayout());
 		emptbtpd.setOpaque(false);
@@ -855,9 +890,72 @@ import java.util.stream.Collectors;
 		mainp.add("ep", PanelUtils.totalCenterInPanel(emptbtpd));
 		mainp.add("sp", sp);
 
-		updateElementListRenderer();
-
 		elementsBreadcrumb.reloadPath(currentFolder, ModElement.class);
+
+		JMenuItem openElement = new JMenuItem(L10N.t("workspace.elements.list.edit.open"));
+		openElement.setFont(openElement.getFont().deriveFont(Font.BOLD));
+		openElement.addActionListener(e -> {
+			IElement selected = list.getSelectedValue();
+			if (selected instanceof FolderElement) {
+				switchFolder((FolderElement) selected);
+			} else
+				editCurrentlySelectedModElement((ModElement) selected, list, 0, 0);
+		});
+
+		deleteElement.setIcon(UIRES.get("16px.clear"));
+		deleteElement.addActionListener(e -> deleteCurrentlySelectedModElement());
+
+		duplicateElement.addActionListener(e -> duplicateCurrentlySelectedModElement());
+
+		codeElement.addMouseListener(new MouseAdapter() {
+			@Override public void mouseClicked(MouseEvent e) {
+				super.mouseClicked(e);
+			}
+		});
+		codeElement.addActionListener(e -> {
+			IElement selected = list.getSelectedValue();
+			if (selected instanceof ModElement) {
+				Point clickPos = list.getMousePosition();
+				editCurrentlySelectedModElementAsCode((ModElement) selected, list,
+						clickPos == null ? 0 : clickPos.x - 10, clickPos == null ? 0 : clickPos.y - 10);
+			}
+		});
+
+		lockElement.addActionListener(e -> lockCode());
+
+		idElement.addActionListener(e -> {
+			IElement mu = list.getSelectedValue();
+			if (mu instanceof ModElement && ((ModElement) mu).getType().getBaseType() != BaseType.DATAPACK) {
+				ModElement modified = ModElementIDsDialog.openModElementIDDialog(mcreator, ((ModElement) mu));
+				if (modified != null)
+					mcreator.getWorkspace().updateModElement(modified);
+			}
+		});
+
+		JMenuItem addElementFolder = new JMenuItem(L10N.t("workspace.elements.list.edit.add.folder"));
+		addElementFolder.setIcon(UIRES.get("laf.newFolder.gif"));
+		addElementFolder.addActionListener(e -> addNewFolder());
+
+		renameElementFolder.setIcon(UIRES.get("laf.renameFolder.gif"));
+		renameElementFolder.addActionListener(e -> {
+			if (list.getSelectedValue() instanceof FolderElement) {
+				renameFolder((FolderElement) list.getSelectedValue());
+			}
+		});
+
+		contextMenu.add(openElement);
+		contextMenu.add(codeElement);
+		contextMenu.addSeparator();
+		contextMenu.add(addElementFolder);
+		contextMenu.add(renameElementFolder);
+		contextMenu.addSeparator();
+		contextMenu.add(deleteElement);
+		contextMenu.addSeparator();
+		contextMenu.add(duplicateElement);
+		contextMenu.add(lockElement);
+		contextMenu.add(idElement);
+
+		updateElementListRenderer();
 	}
 
 	public void switchFolder(FolderElement switchTo) {
@@ -870,6 +968,15 @@ import java.util.stream.Collectors;
 		elementsBreadcrumb.reloadPath(currentFolder, ModElement.class);
 
 		upFolder.setEnabled(!currentFolder.isRoot());
+	}
+
+	private void togglefilter(String filter) {
+		String currentSearchText = search.getText().trim();
+		if (currentSearchText.contains(filter)) {
+			search.setText(currentSearchText.replace(filter, "").replaceAll("\\s{2,}", " ").trim());
+		} else {
+			search.setText(filter + " " + currentSearchText);
+		}
 	}
 
 	private void resort() {
@@ -887,49 +994,91 @@ import java.util.stream.Collectors;
 	}
 
 	private void updateElementListRenderer() {
-		if (PreferencesManager.PREFERENCES.hidden.workspaceIconSize == PreferencesData.WorkspaceIconSize.LARGE) {
-			list.setCellRenderer(new LargeIconModListRender());
+		if (PreferencesManager.PREFERENCES.hidden.workspaceModElementIconSize
+				== PreferencesData.WorkspaceIconSize.TILES) {
+			list.setCellRenderer(new TilesModListRender());
 			list.setFixedCellHeight(72);
 			list.setFixedCellWidth(287);
 			list.setLayoutOrientation(JList.HORIZONTAL_WRAP);
-		} else if (PreferencesManager.PREFERENCES.hidden.workspaceIconSize == PreferencesData.WorkspaceIconSize.SMALL) {
+			view.setIcon(UIRES.get("16px.tiles.gif"));
+			view.setText(L10N.t("workspace.elements.list.tiles"));
+			detailsbar.setVisible(false);
+		} else if (PreferencesManager.PREFERENCES.hidden.workspaceModElementIconSize
+				== PreferencesData.WorkspaceIconSize.LARGE) {
+			list.setCellRenderer(new LargeIconModListRender());
+			list.setFixedCellHeight(97);
+			list.setFixedCellWidth(90);
+			list.setLayoutOrientation(JList.HORIZONTAL_WRAP);
+			view.setIcon(UIRES.get("16px.large.gif"));
+			view.setText(L10N.t("workspace.elements.list.large"));
+			detailsbar.setVisible(false);
+		} else if (PreferencesManager.PREFERENCES.hidden.workspaceModElementIconSize
+				== PreferencesData.WorkspaceIconSize.MEDIUM) {
+			list.setCellRenderer(new MediumIconModListRender());
+			list.setFixedCellHeight(52);
+			list.setFixedCellWidth(287);
+			list.setLayoutOrientation(JList.HORIZONTAL_WRAP);
+			view.setIcon(UIRES.get("16px.medium.gif"));
+			view.setText(L10N.t("workspace.elements.list.medium"));
+			detailsbar.setVisible(false);
+		} else if (PreferencesManager.PREFERENCES.hidden.workspaceModElementIconSize
+				== PreferencesData.WorkspaceIconSize.SMALL) {
 			list.setCellRenderer(new SmallIconModListRender(true));
 			list.setFixedCellHeight(32);
 			list.setFixedCellWidth(200);
 			list.setLayoutOrientation(JList.HORIZONTAL_WRAP);
-		} else {
+			view.setIcon(UIRES.get("16px.small.gif"));
+			view.setText(L10N.t("workspace.elements.list.small"));
+			detailsbar.setVisible(false);
+		} else if (PreferencesManager.PREFERENCES.hidden.workspaceModElementIconSize
+				== PreferencesData.WorkspaceIconSize.LIST) {
 			list.setCellRenderer(new ListIconModListRender());
+			list.setFixedCellHeight(28);
+			list.setFixedCellWidth(-1);
+			list.setLayoutOrientation(JList.VERTICAL);
+			view.setIcon(UIRES.get("16px.list.gif"));
+			view.setText(L10N.t("workspace.elements.list.list"));
+			detailsbar.setVisible(false);
+		} else if (PreferencesManager.PREFERENCES.hidden.workspaceModElementIconSize
+				== PreferencesData.WorkspaceIconSize.DETAILS) {
+			list.setCellRenderer(new DetailsIconModListRender());
 			list.setFixedCellHeight(24);
 			list.setFixedCellWidth(-1);
 			list.setLayoutOrientation(JList.VERTICAL);
+			view.setIcon(UIRES.get("16px.details.gif"));
+			view.setText(L10N.t("workspace.elements.list.details"));
+			detailsbar.setVisible(true);
 		}
 	}
 
 	public void disableRemoving() {
 		but3.setEnabled(false);
+		deleteElement.setEnabled(false);
 		but3.setCursor(new Cursor(Cursor.WAIT_CURSOR));
 	}
 
 	public void enableRemoving() {
 		but3.setEnabled(true);
+		deleteElement.setEnabled(true);
 		but3.setCursor(new Cursor(Cursor.HAND_CURSOR));
 	}
 
 	private void lockCode() {
-		Object[] options = { "Lock/unlock the code", "Cancel" };
+		Object[] options = { L10N.t("workspace.elements.lock_modelement_lock_unlock"),
+				UIManager.getString("OptionPane.cancelButtonText") };
 		int n = JOptionPane.showOptionDialog(mcreator, L10N.t("workspace.elements.lock_modelement_message"),
 				L10N.t("workspace.elements.lock_modelement_confirm"), JOptionPane.YES_NO_CANCEL_OPTION,
 				JOptionPane.WARNING_MESSAGE, null, options, options[1]);
 		if (n == 0) {
 			ProgressDialog dial = new ProgressDialog(mcreator, L10N.t("workspace.elements.lock_modelement_title"));
 			Thread t = new Thread(() -> {
-				ProgressDialog.ProgressUnit p0 = new ProgressDialog.ProgressUnit("Locking/unlocking mod elements");
+				ProgressDialog.ProgressUnit p0 = new ProgressDialog.ProgressUnit(
+						L10N.t("workspace.elements.lock_modelement_locking_unlocking"));
 				dial.addProgress(p0);
 
 				List<ModElement> elementsThatGotUnlocked = new ArrayList<>();
 				list.getSelectedValuesList().forEach(el -> {
-					if (el instanceof ModElement) {
-						ModElement mu = (ModElement) el;
+					if (el instanceof ModElement mu) {
 						if (mu.isCodeLocked()) {
 							mu.setCodeLock(false);
 							mcreator.getWorkspace().updateModElement(mu);
@@ -948,7 +1097,7 @@ import java.util.stream.Collectors;
 				// if we have new unlocked elements, we recreate their code
 				if (elementsThatGotUnlocked.size() > 0) {
 					ProgressDialog.ProgressUnit p1 = new ProgressDialog.ProgressUnit(
-							"Regenerating code of unlocked elements");
+							L10N.t("workspace.elements.lock_modelement_regeneration"));
 					dial.addProgress(p1);
 					int i = 0;
 					for (ModElement mod : elementsThatGotUnlocked) {
@@ -964,7 +1113,8 @@ import java.util.stream.Collectors;
 					p1.ok();
 					dial.refreshDisplay();
 
-					ProgressDialog.ProgressUnit p2 = new ProgressDialog.ProgressUnit("Rebuilding workspace");
+					ProgressDialog.ProgressUnit p2 = new ProgressDialog.ProgressUnit(
+							L10N.t("workspace.elements.lock_modelement_rebuilding_workspace"));
 					dial.addProgress(p2);
 					mcreator.actionRegistry.buildWorkspace.doAction();
 					p2.ok();
@@ -978,19 +1128,17 @@ import java.util.stream.Collectors;
 	}
 
 	private void duplicateCurrentlySelectedModElement() {
-		if (list.getSelectedValue() instanceof ModElement) {
-			ModElement mu = (ModElement) list.getSelectedValue();
+		if (list.getSelectedValue() instanceof ModElement mu) {
 			if (mcreator.getModElementManager().hasModElementGeneratableElement(mu)) {
 				String modName = VOptionPane.showInputDialog(mcreator,
-						"<html><font style=\"font-size: 13px;\">Enter the name of the new mod element:</font><br><small>"
-								+ "This mod element will be the same as " + mu.getName()
-								+ ", but with this name.</font>", "Duplicate " + mu.getName(), mu.getElementIcon(),
+						L10N.t("workspace.elements.duplicate_message", mu.getName()),
+						L10N.t("workspace.elements.duplicate_element", mu.getName()), mu.getElementIcon(),
 						new OptionPaneValidatior() {
 							@Override public Validator.ValidationResult validate(JComponent component) {
-								return new ModElementNameValidator(mcreator.getWorkspace(), (VTextField) component)
-										.validate();
+								return new ModElementNameValidator(mcreator.getWorkspace(),
+										(VTextField) component).validate();
 							}
-						}, "Duplicate", "Cancel");
+						}, L10N.t("workspace.elements.duplicate"), UIManager.getString("OptionPane.cancelButtonText"));
 				if (modName != null && !modName.equals("")) {
 					modName = JavaConventions.convertToValidClassName(modName);
 
@@ -1003,8 +1151,8 @@ import java.util.stream.Collectors;
 										.generatableElementToJSON(generatableElementOriginal), duplicateModElement);
 
 						if (generatableElementDuplicate instanceof NamespacedGeneratableElement) {
-							((NamespacedGeneratableElement) generatableElementDuplicate).name = RegistryNameFixer
-									.fromCamelCase(modName);
+							((NamespacedGeneratableElement) generatableElementDuplicate).name = RegistryNameFixer.fromCamelCase(
+									modName);
 						}
 
 						mcreator.getGenerator().generateElement(generatableElementDuplicate);
@@ -1053,8 +1201,7 @@ import java.util.stream.Collectors;
 			if (mu.isCodeLocked()) {
 				editCurrentlySelectedModElementAsCode(mu, component, x, y);
 			} else {
-				ModElementGUI<?> modeditor = ModElementTypeRegistry.REGISTRY.get(mu.getType())
-						.getModElement(mcreator, mu, true);
+				ModElementGUI<?> modeditor = mu.getType().getModElementGUI(mcreator, mu, true);
 				if (modeditor != null) {
 					modeditor.showView();
 				}
@@ -1063,37 +1210,128 @@ import java.util.stream.Collectors;
 			if (mu.isCodeLocked()) {
 				editCurrentlySelectedModElementAsCode(mu, component, x, y);
 			} else {
-				JOptionPane.showMessageDialog(null,
-						"<html>This mod does not have saved instance. If you want to make it editable,<br>you need to remake it.<br>"
-								+ "<small>You probably see this because you have updated MCreator and your mod was made before saving was possible.");
+				JOptionPane.showMessageDialog(null, L10N.t("workspace.elements.edit_modelement_nosavedinstance"));
 			}
 		}
 	}
 
 	private void editCurrentlySelectedModElementAsCode(ModElement mu, JComponent component, int x, int y) {
-		List<File> modElementFiles = mcreator.getGenerator().getModElementGeneratorTemplatesList(mu).stream()
-				.map(GeneratorTemplate::getFile).collect(Collectors.toList());
+		GeneratableElement ge = mu.getGeneratableElement();
+
+		List<GeneratorTemplate> modElementFiles = mcreator.getGenerator().getModElementGeneratorTemplatesList(mu, ge);
+
+		modElementFiles.addAll(
+				mcreator.getGenerator().getModElementGlobalTemplatesList(mu.getType(), false, new AtomicInteger()));
+
+		if (ge instanceof ICommonType) {
+			Collection<BaseType> baseTypes = ((ICommonType) ge).getBaseTypesProvided();
+			for (BaseType baseType : baseTypes) {
+				modElementFiles.addAll(mcreator.getGenerator().getGlobalTemplatesList(
+						mcreator.getGenerator().getGeneratorConfiguration().getDefinitionsProvider()
+								.getBaseTypeDefinition(baseType), false, new AtomicInteger()));
+			}
+		}
 
 		if (modElementFiles.size() > 1) {
 			JPopupMenu codeDropdown = new JPopupMenu();
 			codeDropdown.setBorder(BorderFactory.createEmptyBorder());
 			codeDropdown.setBackground(((Color) UIManager.get("MCreatorLAF.LIGHT_ACCENT")).darker());
 
-			for (File modElementFile : modElementFiles) {
+			boolean global = false;
+			for (GeneratorTemplate modElementFile : modElementFiles) {
+				if (!global && modElementFile.isGlobal()) {
+					codeDropdown.addSeparator();
+					global = true;
+				}
+
 				JMenuItem item = new JMenuItem(
-						"<html>" + modElementFile.getName() + "<br><small color=#666666>" + mcreator.getWorkspace()
-								.getWorkspaceFolder().toPath().relativize(modElementFile.toPath()));
-				item.setIcon(FileIcons.getIconForFile(modElementFile));
+						"<html>" + modElementFile.getFile().getName() + "<br><small color=#666666>"
+								+ mcreator.getWorkspace().getWorkspaceFolder().toPath()
+								.relativize(modElementFile.getFile().toPath()));
+				item.setIcon(FileIcons.getIconForFile(modElementFile.getFile()));
 				item.setBackground(((Color) UIManager.get("MCreatorLAF.LIGHT_ACCENT")).darker());
 				item.setForeground((Color) UIManager.get("MCreatorLAF.BRIGHT_COLOR"));
 				item.setIconTextGap(8);
 				item.setBorder(BorderFactory.createEmptyBorder(3, 0, 5, 3));
-				item.addActionListener(e -> ProjectFileOpener.openCodeFile(mcreator, modElementFile));
+				item.addActionListener(e -> ProjectFileOpener.openCodeFile(mcreator, modElementFile.getFile()));
 				codeDropdown.add(item);
 			}
 			codeDropdown.show(component, x, y);
 		} else if (modElementFiles.size() == 1) {
-			ProjectFileOpener.openCodeFile(mcreator, modElementFiles.get(0));
+			ProjectFileOpener.openCodeFile(mcreator, modElementFiles.get(0).getFile());
+		}
+	}
+
+	private void deleteCurrentlySelectedModElement() {
+		if (but3.isEnabled()) {
+			if (list.getSelectedValue() != null) {
+				int n = JOptionPane.showConfirmDialog(mcreator,
+						L10N.t("workspace.elements.confirm_delete_message", list.getSelectedValuesList().size()),
+						L10N.t("common.confirmation"), JOptionPane.YES_NO_OPTION, JOptionPane.QUESTION_MESSAGE, null);
+
+				if (n == 0) {
+					AtomicBoolean buildNeeded = new AtomicBoolean(false);
+					list.getSelectedValuesList().forEach(re -> {
+						if (re instanceof ModElement) {
+							if (!buildNeeded.get()) {
+								GeneratableElement ge = ((ModElement) re).getGeneratableElement();
+								if (ge != null && mcreator.getModElementManager().requiresElementGradleBuild(ge))
+									buildNeeded.set(true);
+							}
+
+							mcreator.getWorkspace().removeModElement(((ModElement) re));
+						} else if (re instanceof FolderElement folder) {
+
+							// re-assign mod-elements from deleted folder to parent folder
+							for (ModElement modElement : mcreator.getWorkspace().getModElements()) {
+								if (folder.equals(modElement.getFolderPath())) {
+									modElement.setParentFolder(folder.getParent());
+								}
+							}
+
+							// re-assign deleted recursive children folder's elements to parent folder too
+							for (FolderElement childFolder : folder.getRecursiveFolderChildren()) {
+								for (ModElement modElement : mcreator.getWorkspace().getModElements()) {
+									if (childFolder.equals(modElement.getFolderPath())) {
+										modElement.setParentFolder(folder.getParent());
+									}
+								}
+							}
+
+							// remove folder from the parent's child list
+							// all folder's child folders will be orphaned at this point too
+							// and thus removed
+							folder.getParent().removeChild(folder);
+						}
+					});
+					updateMods();
+
+					if (buildNeeded.get())
+						mcreator.actionRegistry.buildWorkspace.doAction();
+				}
+			}
+		}
+	}
+
+	private void addNewFolder() {
+		String name = VOptionPane.showInputDialog(mcreator, L10N.t("workspace.elements.folders.add.message"),
+				L10N.t("workspace.elements.folders.add.title"), null, folderNameValidator);
+
+		if (name != null) {
+			currentFolder.addChild(new FolderElement(name, currentFolder));
+			mcreator.getWorkspace().markDirty();
+			reloadElements();
+		}
+	}
+
+	private void renameFolder(FolderElement selected) {
+		String newName = VOptionPane.showInputDialog(mcreator, L10N.t("workspace.elements.folders.rename.message"),
+				L10N.t("workspace.elements.folders.rename.title"), null, folderNameValidator);
+		if (newName != null) {
+			selected.setName(mcreator.getWorkspace(), newName);
+
+			mcreator.getWorkspace().markDirty();
+			reloadElements();
 		}
 	}
 
@@ -1139,8 +1377,8 @@ import java.util.stream.Collectors;
 			}
 
 			if (mcreator.getWorkspace().getModElements().stream()
-					.anyMatch(el -> currentFolder.equals(el.getFolderPath())) || !currentFolder
-					.getDirectFolderChildren().isEmpty()) {
+					.anyMatch(el -> currentFolder.equals(el.getFolderPath()))
+					|| !currentFolder.getDirectFolderChildren().isEmpty()) {
 				mainpcl.show(mainp, "sp");
 
 				// reload list model partially in the background
@@ -1250,7 +1488,7 @@ import java.util.stream.Collectors;
 			filterItems.clear();
 			String searchInput = search.getText();
 
-			List<ModElementType> metfilters = new ArrayList<>();
+			List<ModElementType<?>> metfilters = new ArrayList<>();
 			List<String> filters = new ArrayList<>();
 			List<String> keyWords = new ArrayList<>();
 
@@ -1261,7 +1499,7 @@ import java.util.stream.Collectors;
 					pat = pat.replaceFirst("f:", "");
 					if (pat.equals("locked") || pat.equals("ok") || pat.equals("err"))
 						filters.add(pat);
-					for (ModElementType type : ModElementType.values()) {
+					for (ModElementType<?> type : ModElementTypeLoader.REGISTRY) {
 						if (pat.equals(type.getReadableName().replace(" ", "").toLowerCase(Locale.ENGLISH))) {
 							metfilters.add(type);
 						}
@@ -1270,8 +1508,10 @@ import java.util.stream.Collectors;
 					keyWords.add(pat.replace("\"", ""));
 			}
 
+			boolean flattenFolders = !searchInput.isEmpty();
+
 			filterItems.addAll(items.stream().filter(e -> e instanceof FolderElement)
-					.filter(item -> currentFolder.getDirectFolderChildren().contains(item) || (!keyWords.isEmpty()
+					.filter(item -> currentFolder.getDirectFolderChildren().contains(item) || (flattenFolders
 							&& currentFolder.getRecursiveFolderChildren().contains(item))).filter(item -> {
 						if (!filters.isEmpty() || !metfilters.isEmpty())
 							return false;
@@ -1284,11 +1524,11 @@ import java.util.stream.Collectors;
 								return true;
 
 						return false;
-					}).collect(Collectors.toList()));
+					}).toList());
 
 			List<ModElement> modElements = items.stream().filter(e -> e instanceof ModElement).map(e -> (ModElement) e)
-					.filter(item -> currentFolder.equals(item.getFolderPath()) || (!keyWords.isEmpty() && currentFolder
-							.getRecursiveFolderChildren().stream()
+					.filter(item -> currentFolder.equals(item.getFolderPath()) || (flattenFolders
+							&& currentFolder.getRecursiveFolderChildren().stream()
 							.anyMatch(folder -> folder.equals(item.getFolderPath())))).filter(item -> {
 						if (keyWords.size() == 0)
 							return true;
@@ -1321,7 +1561,7 @@ import java.util.stream.Collectors;
 						if (metfilters.size() == 0)
 							return true;
 
-						for (ModElementType type : metfilters)
+						for (ModElementType<?> type : metfilters)
 							if (item.getType() == type)
 								return true;
 						return false;
