@@ -31,7 +31,6 @@ import javax.swing.*;
 import java.awt.*;
 import java.util.List;
 import java.util.*;
-import java.util.stream.Collectors;
 
 public class WorkspacePanelStructures extends JPanel implements IReloadableFilterable {
 
@@ -91,9 +90,8 @@ public class WorkspacePanelStructures extends JPanel implements IReloadableFilte
 			List<String> files = structureElementList.getSelectedValuesList();
 			if (files.size() > 0) {
 				int n = JOptionPane.showConfirmDialog(workspacePanel.getMcreator(),
-						L10N.t("workspace.structure.confirm_deletion_message"),
-						L10N.t("workspace.structure.confirm_deletion_title"), JOptionPane.YES_NO_OPTION,
-						JOptionPane.QUESTION_MESSAGE);
+						L10N.t("workspace.structure.confirm_deletion_message"), L10N.t("common.confirmation"),
+						JOptionPane.YES_NO_OPTION, JOptionPane.QUESTION_MESSAGE);
 				if (n == 0) {
 					files.forEach(workspacePanel.getMcreator().getFolderManager()::removeStructure);
 					reloadElements();
@@ -170,8 +168,7 @@ public class WorkspacePanelStructures extends JPanel implements IReloadableFilte
 			filterItems.clear();
 			String term = workspacePanel.search.getText();
 			filterItems.addAll(items.stream().filter(Objects::nonNull)
-					.filter(item -> (item.toLowerCase(Locale.ENGLISH).contains(term.toLowerCase(Locale.ENGLISH))))
-					.collect(Collectors.toList()));
+					.filter(e -> (e.toLowerCase(Locale.ENGLISH).contains(term.toLowerCase(Locale.ENGLISH)))).toList());
 
 			if (workspacePanel.sortName.isSelected()) {
 				filterItems.sort(Comparator.comparing(String::toString));
