@@ -33,9 +33,9 @@ import net.mcreator.ui.laf.SlickDarkScrollBarUI;
 import net.mcreator.ui.views.editor.image.ImageMakerView;
 import net.mcreator.ui.workspace.IReloadableFilterable;
 import net.mcreator.ui.workspace.WorkspacePanel;
+import net.mcreator.util.FilenameUtilsPatched;
 import net.mcreator.util.StringUtils;
 import net.mcreator.util.image.ImageUtils;
-import org.apache.commons.io.FilenameUtils;
 
 import javax.swing.*;
 import java.awt.*;
@@ -45,7 +45,6 @@ import java.io.File;
 import java.util.List;
 import java.util.*;
 import java.util.concurrent.ConcurrentHashMap;
-import java.util.stream.Collectors;
 
 public class WorkspacePanelTextures extends JPanel implements IReloadableFilterable {
 
@@ -88,10 +87,10 @@ public class WorkspacePanelTextures extends JPanel implements IReloadableFiltera
 		lista = createListElement(dmla, L10N.t("workspace.textures.category_armor"));
 		listo = createListElement(dmlo, L10N.t("workspace.textures.category_other"));
 
-		respan.add(listb.getComponent());
-		respan.add(listi.getComponent());
-		respan.add(lista.getComponent());
-		respan.add(listo.getComponent());
+		respan.add(listb.component());
+		respan.add(listi.component());
+		respan.add(lista.component());
+		respan.add(listo.component());
 
 		respan.setOpaque(false);
 
@@ -122,8 +121,8 @@ public class WorkspacePanelTextures extends JPanel implements IReloadableFiltera
 
 		JPopupMenu createMenu = new JPopupMenu();
 		createMenu.setBackground((Color) UIManager.get("MCreatorLAF.LIGHT_ACCENT"));
-		createMenu
-				.setBorder(BorderFactory.createMatteBorder(0, 3, 0, 0, (Color) UIManager.get("MCreatorLAF.MAIN_TINT")));
+		createMenu.setBorder(
+				BorderFactory.createMatteBorder(0, 3, 0, 0, (Color) UIManager.get("MCreatorLAF.MAIN_TINT")));
 
 		createMenu.add(workspacePanel.getMcreator().actionRegistry.createMCItemTexture);
 		createMenu.add(workspacePanel.getMcreator().actionRegistry.createArmorTexture);
@@ -141,8 +140,8 @@ public class WorkspacePanelTextures extends JPanel implements IReloadableFiltera
 
 		JPopupMenu importMenu = new JPopupMenu();
 		importMenu.setBackground((Color) UIManager.get("MCreatorLAF.LIGHT_ACCENT"));
-		importMenu
-				.setBorder(BorderFactory.createMatteBorder(0, 3, 0, 0, (Color) UIManager.get("MCreatorLAF.MAIN_TINT")));
+		importMenu.setBorder(
+				BorderFactory.createMatteBorder(0, 3, 0, 0, (Color) UIManager.get("MCreatorLAF.MAIN_TINT")));
 
 		importMenu.add(workspacePanel.getMcreator().actionRegistry.importBlockTexture);
 		importMenu.add(workspacePanel.getMcreator().actionRegistry.importItemTexture);
@@ -185,11 +184,9 @@ public class WorkspacePanelTextures extends JPanel implements IReloadableFiltera
 		del.addActionListener(actionEvent -> {
 			List<File> files = listGroup.getSelectedItemsList();
 			if (files.size() > 0) {
-				Object[] options = { "Yes", "No" };
-				int n = JOptionPane.showOptionDialog(workspacePanel.getMcreator(),
-						L10N.t("workspace.textures.confirm_deletion_message"),
-						L10N.t("workspace.textures.confirm_deletion_title"), JOptionPane.YES_NO_CANCEL_OPTION,
-						JOptionPane.QUESTION_MESSAGE, null, options, options[1]);
+				int n = JOptionPane.showConfirmDialog(workspacePanel.getMcreator(),
+						L10N.t("workspace.textures.confirm_deletion_message"), L10N.t("common.confirmation"),
+						JOptionPane.YES_NO_OPTION, JOptionPane.QUESTION_MESSAGE, null);
 
 				if (n == 0) {
 					files.forEach(file -> {
@@ -258,10 +255,10 @@ public class WorkspacePanelTextures extends JPanel implements IReloadableFiltera
 
 	@Override public void reloadElements() {
 		new Thread(() -> {
-			List<File> selectedb = listb.getList().getSelectedValuesList();
-			List<File> selectedi = listi.getList().getSelectedValuesList();
-			List<File> selecteda = lista.getList().getSelectedValuesList();
-			List<File> selectedo = listo.getList().getSelectedValuesList();
+			List<File> selectedb = listb.list().getSelectedValuesList();
+			List<File> selectedi = listi.list().getSelectedValuesList();
+			List<File> selecteda = lista.list().getSelectedValuesList();
+			List<File> selectedo = listo.list().getSelectedValuesList();
 
 			FilterModel newdmlb = new FilterModel();
 			FilterModel newdmli = new FilterModel();
@@ -274,17 +271,17 @@ public class WorkspacePanelTextures extends JPanel implements IReloadableFiltera
 			workspacePanel.getMcreator().getFolderManager().getOtherTexturesList().forEach(newdmlo::addElement);
 
 			SwingUtilities.invokeLater(() -> {
-				listb.getList().setModel(dmlb = newdmlb);
-				listi.getList().setModel(dmli = newdmli);
-				lista.getList().setModel(dmla = newdmla);
-				listo.getList().setModel(dmlo = newdmlo);
+				listb.list().setModel(dmlb = newdmlb);
+				listi.list().setModel(dmli = newdmli);
+				lista.list().setModel(dmla = newdmla);
+				listo.list().setModel(dmlo = newdmlo);
 
 				textureRender.invalidateIconCache();
 
-				ListUtil.setSelectedValues(listb.getList(), selectedb);
-				ListUtil.setSelectedValues(listi.getList(), selectedi);
-				ListUtil.setSelectedValues(lista.getList(), selecteda);
-				ListUtil.setSelectedValues(listo.getList(), selectedo);
+				ListUtil.setSelectedValues(listb.list(), selectedb);
+				ListUtil.setSelectedValues(listi.list(), selectedi);
+				ListUtil.setSelectedValues(lista.list(), selecteda);
+				ListUtil.setSelectedValues(listo.list(), selectedo);
 
 				refilterElements();
 			});
@@ -298,35 +295,35 @@ public class WorkspacePanelTextures extends JPanel implements IReloadableFiltera
 		dmlo.refilter();
 
 		if (dmli.getSize() > 0) {
-			listi.getComponent().setPreferredSize(null);
-			listi.getComponent().setVisible(true);
+			listi.component().setPreferredSize(null);
+			listi.component().setVisible(true);
 		} else {
-			listi.getComponent().setPreferredSize(new Dimension(0, 0));
-			listi.getComponent().setVisible(false);
+			listi.component().setPreferredSize(new Dimension(0, 0));
+			listi.component().setVisible(false);
 		}
 
 		if (dmla.getSize() > 0) {
-			lista.getComponent().setPreferredSize(null);
-			lista.getComponent().setVisible(true);
+			lista.component().setPreferredSize(null);
+			lista.component().setVisible(true);
 		} else {
-			lista.getComponent().setPreferredSize(new Dimension(0, 0));
-			lista.getComponent().setVisible(false);
+			lista.component().setPreferredSize(new Dimension(0, 0));
+			lista.component().setVisible(false);
 		}
 
 		if (dmlb.getSize() > 0) {
-			listb.getComponent().setPreferredSize(null);
-			listb.getComponent().setVisible(true);
+			listb.component().setPreferredSize(null);
+			listb.component().setVisible(true);
 		} else {
-			listb.getComponent().setPreferredSize(new Dimension(0, 0));
-			listb.getComponent().setVisible(false);
+			listb.component().setPreferredSize(new Dimension(0, 0));
+			listb.component().setVisible(false);
 		}
 
 		if (dmlo.getSize() > 0) {
-			listo.getComponent().setPreferredSize(null);
-			listo.getComponent().setVisible(true);
+			listo.component().setPreferredSize(null);
+			listo.component().setVisible(true);
 		} else {
-			listo.getComponent().setPreferredSize(new Dimension(0, 0));
-			listo.getComponent().setVisible(false);
+			listo.component().setPreferredSize(new Dimension(0, 0));
+			listo.component().setVisible(false);
 		}
 
 	}
@@ -383,7 +380,7 @@ public class WorkspacePanelTextures extends JPanel implements IReloadableFiltera
 			String term = workspacePanel.search.getText();
 			filterItems.addAll(items.stream().filter(Objects::nonNull)
 					.filter(item -> (item.getName().toLowerCase(Locale.ENGLISH)
-							.contains(term.toLowerCase(Locale.ENGLISH)))).collect(Collectors.toList()));
+							.contains(term.toLowerCase(Locale.ENGLISH)))).toList());
 
 			if (workspacePanel.sortName.isSelected()) {
 				filterItems.sort(Comparator.comparing(File::getName));
@@ -426,7 +423,7 @@ public class WorkspacePanelTextures extends JPanel implements IReloadableFiltera
 			}
 
 			if (ma != null) {
-				String name = StringUtils.abbreviateString(FilenameUtils.removeExtension(ma.getName()), 10);
+				String name = StringUtils.abbreviateString(FilenameUtilsPatched.removeExtension(ma.getName()), 10);
 				if (name.trim().equals(""))
 					name = "(untitled)";
 
@@ -444,8 +441,7 @@ public class WorkspacePanelTextures extends JPanel implements IReloadableFiltera
 					}
 
 					if (!ma.getName().matches("[a-z0-9/._-]+")) {
-						if (getIcon() instanceof ImageIcon) {
-							ImageIcon icon = (ImageIcon) getIcon();
+						if (getIcon() instanceof ImageIcon icon) {
 							icon = ImageUtils.changeSaturation(icon, 0.5f);
 							setIcon(ImageUtils.drawOver(icon, UIRES.get("18px.warning"), 0, 0, 18, 18));
 							setForeground(new Color(255, 245, 15));
@@ -459,22 +455,6 @@ public class WorkspacePanelTextures extends JPanel implements IReloadableFiltera
 
 	}
 
-	private static class JComponentWithList<T> {
-		private final JComponent component;
-		private final JList<T> list;
-
-		public JComponentWithList(JComponent component, JList<T> list) {
-			this.component = component;
-			this.list = list;
-		}
-
-		public JComponent getComponent() {
-			return component;
-		}
-
-		public JList<T> getList() {
-			return list;
-		}
-	}
+	private record JComponentWithList<T>(JComponent component, JList<T> list) {}
 
 }
